fix: Fix search bar alignments and ui bug fixes

--- a/packages/audits/src/components/styles.scss
+++ b/packages/audits/src/components/styles.scss
@@ -101,7 +101,7 @@
   }
 
   &__subHeader {
-    padding: var(--fe-header-padding);
+    padding: 1rem 2rem;
 
     &-menuIcon {
       fill: var(--color-primary);
