--- a/packages/auth/src/styles/team.scss
+++ b/packages/auth/src/styles/team.scss
@@ -21,7 +21,7 @@
   }
 
   &__table-toolbar {
-    padding: 0.5rem 2rem;
+    padding: 1rem 2rem;
   }
 
   &__filter-popup-md {
