--- a/packages/core/src/components/PageHeader/style.scss
+++ b/packages/core/src/components/PageHeader/style.scss
@@ -23,7 +23,7 @@
   border-bottom: 1px solid #eee;
   line-height: 1;
   min-height: 90px;
-  margin-bottom: 10px;
+  //margin-bottom: 10px;
 
   .fe-left {
     display: flex;
