--- a/packages/core/src/elements/Input/FeInput.scss
+++ b/packages/core/src/elements/Input/FeInput.scss
@@ -132,7 +132,8 @@
       padding-right: 2rem;
     }
     .fe-icon {
-      margin-left: -2.5rem;
+      margin-left: -2rem;
+      margin-right: 0.5rem;
     }
   }
 
